hphp/test/slow/reflection/setAccessibleTwo.php.expectf

Notice: Undefined property: A::$b in %s/test/slow/reflection/setAccessibleTwo.php on line 14

Fatal error: Invalid access to class C's property d in %s/test/slow/reflection/setAccessibleTwo.php on line 19
